# lexmakesit

./: .gitignore  .gitkeep
.agent/: IMPLEMENTATION_PLAN.md
.agent/workflows/: deploy-portfolio.md  update-docs.md
backend/: .gitignore  AI_RECEPTIONIST_SOURCE_OF_TRUTH.md  COST_DIAGNOSIS.md  Caddyfile  Caddyfile.debug  Dockerfile  EVAL_SYSTEM_README.md  README.md  SPEED_OPTIMIZATION.md  call_monitor.py  check_twilio.py  docker-compose.hotfix.yml  docker-compose.override.yml  docker-compose.remote.yml  endpoints_check.py  fix_twilio_url.py  internal_test.py  internal_test_v2.py  internal_test_v3.py  internal_test_v4.py  path_diag.py  poison.py  pytest.ini  requirements.txt  run.py  start_monitor.py  test_improvements.py  test_voice_integration.py  ws_test.py
backend/.git_backup/: COMMIT_EDITMSG  config  index  packed-refs
backend/ai_receptionist/: .gitignore  __init__.py  pyproject.toml
backend/ai_receptionist/agent/: conversation_bot.py
backend/ai_receptionist/agent/tasks/: improvement_engine.py  metrics_engine.py  report_engine.py
backend/ai_receptionist/api/: realtime.py
backend/ai_receptionist/app/: main.py  main_fixed.py  main_sanitized.py  main_v3.py  middleware.py
backend/ai_receptionist/app/api/: admin.py  auth.py  oauth.py  twilio.py  twilio_fixed.py  voice_settings.py
backend/ai_receptionist/config/: __init__.py  settings.py
backend/ai_receptionist/core/: __init__.py  database.py  di.py
backend/ai_receptionist/models/: __init__.py  base.py  dtos.py  oauth.py  phone_number.py  tenant.py  user.py
backend/ai_receptionist/services/: calendar.py
backend/ai_receptionist/services/ai/: __init__.py
backend/ai_receptionist/services/auth/: password.py
backend/ai_receptionist/services/elevenlabs/: voice_service.py
backend/ai_receptionist/services/telephony/: __init__.py  twilio_service.py
backend/ai_receptionist/services/voice/: cost_tracker.py  endpoints.py  intents.py  messages.py
backend/ai_receptionist/tests/: test_billing.py  test_fallback.py  test_feature_flag_service.py  test_rag.py  test_twilio_webhook.py
backend/ai_receptionist/utils/: __init__.py  encryption.py
backend/ai_receptionist/workers/: __init__.py  fallback.py  tasks.py
backend/alembic/: env.py
backend/docs/: COMPILATION_SUMMARY.md  COST_DIAGNOSIS.md  QUICK_START_GEMINI.md  README.md  SILENCE_BUG_FIX.md
backend/prod_deploy/: add_voice_columns.py  patch_main.py  patch_settings.py  patch_settings_page.py  test_voice_api.py  voice_service.py  voice_settings.py
backend/scripts/: generate_changelog.py
backend/tests/: test_eval_blueprint.py  test_generate_changelog.py  test_migrations.py
backend/tools/: adminctl.py
docs/: CONTRIBUTING.md  README.md
docs/backend/: README.md  architecture.md  calendar-integration.md  performance.md  technical-debt.md
docs/etc/: README.md  onboarding.md  operations.md  pilot-agreement.md  release-plan.md
docs/frontend/: README.md
docs/infra/: README.md  caddy-proxy.md  ci-cd.md  deployment.md  monitoring.md  server-hardening.md
frontend/: .copilot.md  .gitignore  UI_HEALTH.md  app_layout_v2.tsx  app_layout_v3.tsx  check_env.py  dashboard_api.ts  dashboard_api_config.ts  dashboard_page_fixed.tsx  dashboard_page_v2.tsx  onboarding_final.tsx  onboarding_v2.tsx  readme.md  test_openai.py
frontend/.git_backup/: COMMIT_EDITMSG  ORIG_HEAD  config  index  packed-refs
frontend/ai_receptionist/: .gitignore  (+5 more)
frontend/inventory_manager/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS_STATUS.md  Makefile  OPERATIONS.md  README.md  RELEASE_PLAN.md  bandit-report.json  docker-compose.yml  inventory_manager.service  nginx-inventory-manager.conf  project_arch.md  pyproject.toml  requirements.txt.deprecated  ruff.toml  safety-report.json  server.err
frontend/inventory_manager/.github/: copilot-instructions.md  dependabot.yml
frontend/inventory_manager/.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml  tdd.yml
frontend/inventory_manager/config/: .env.example
frontend/inventory_manager/deploy/docker/: .dockerignore  Dockerfile  README.md  build.sh
frontend/inventory_manager/docs/: SECURITY_CHECKLIST.md  SECURITY_INCIDENT.md  TDD_WORKFLOW.md  VERSIONING.md  lightspeed_api_overview.md
frontend/inventory_manager/docs/handout/: Appendix_Lightspeed_API.md  Demo_Instructions.md  IS344_IS218_Executive_Summary.md
frontend/inventory_manager/docs/pr/: feat-sheets-sync-and-restocklist.md  sec-secrets-hygiene.md
frontend/inventory_manager/sample_data/: products.csv  sales.csv
frontend/inventory_manager/sample_data/lightspeed/: inventory.json  products.json  sales.json
frontend/inventory_manager/scripts/: generate_qr_codes.py  ngrok-ctl  ngrok_manager.py  run_local.py  smart_start.py  start_with_ngrok.sh
frontend/inventory_manager/src/: __init__.py  __version__.py
frontend/inventory_manager/src/adapters/: __init__.py
frontend/inventory_manager/src/app/: __init__.py
frontend/inventory_manager/src/app/static/: app.js  style.css
frontend/inventory_manager/src/app/templates/: base.html  index.html  inventory.html  low_stock.html
frontend/inventory_manager/src/core/: scheduler.py
frontend/inventory_manager/src/domain/: exceptions.py  inventory.py
frontend/inventory_manager/src/domain/models/: __init__.py  database.py
frontend/inventory_manager/src/infra/: exceptions.py  lightspeed_client.py  sheets_repo.py
frontend/inventory_manager/src/ingestion/: csv_ingest.py
frontend/inventory_manager/src/lightspeed/: __init__.py
frontend/inventory_manager/src/services/: csv_ingest.py  inventory.py  inventory_service.py  ls_api.py
frontend/inventory_manager/src/services/lightspeed/: __init__.py  api.py  auth.py  webhooks.py
frontend/inventory_manager/src/services/sheets/: __init__.py  service.py
frontend/inventory_manager/src/sync/: __init__.py
frontend/inventory_manager/tests/: conftest.py  test_app.py  test_csv_ingest.py  test_inventory.py  test_inventory_service.py  test_lightspeed_client.py  test_sheets.py  test_sheets_repo.py
infra/: README.md
(+202 files in other folders)
