[tool.poetry]
name = "ai-receptionist"
version = "0.1.0"
description = "AI receptionist service using FastAPI with SOLID architecture and Twilio webhook stub"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "app" },
  { include = "core" },
  { include = "services" },
  { include = "models" },
  { include = "db" },
  { include = "workers" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.118.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
twilio = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.0"
black = "^24.8.0"
mypy = "^1.11.0"
types-requests = "^2.32.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
